# ai-desktop-assistant

./: .env.example  .env.template  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  DESKTOP_OVERLAY_README.md  GITHUB_SETUP_CHECKLIST.md  INSTALL.md  LICENSE  Makefile  PRIVACY.md  README.md  ROADMAP.md  SAFETY.md  SECURITY.md  SUPPORT.md  build_exe.bat  create_release_zip.bat  finish_release.ps1  package.json  pyproject.toml  requirements.txt  run_assistant.bat  run_assistant_with_overlay.bat  setup_env.bat  start_admin.vbs  start_all_admin.bat  start_assistant.bat  start_assistant.ps1  start_hotkeys.bat  topics.yml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  topics.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml  stale.yml
assets/: demo_screenshot_placeholder.txt  demo_script.txt  linkedin_post.txt  linkedin_post_long.txt  linkedin_post_medium.txt  linkedin_post_short.txt  linkedin_schedule.md  recruiter_email.txt  recruiter_email_template.txt  recruiters.csv  resume_bullets.txt
assets/outreach/: checklist.md  email_template_generic.txt  inmail_templates.txt  linkedin_posts.txt  recruiters_placeholder.csv  targets.csv
automation/: __init__.py  browser.py  editor.py  system_control.py
avatar/: animation_controller.py  avatar_ws_client.py
brain/: command_schema.json  llm_client.py  memory_manager.py  system_prompt.txt
browser_profile/: Last Browser  Local State
browser_profile/Default/: DIPS  Favicons  History  MediaDeviceSalts  Preferences  Secure Preferences  Web Data
browser_profile/GrShaderCache/: data_0  data_1  (+2 more)
config/: agent_directives.py  allowlist.txt  dangerous_actions.txt  settings.yaml
core/: approval.py  autonomous_coder.py  autonomous_review.py  background_queue.py  command_parser.py  confirmation.py  git_helper.py  llm_brain.py  main_controller.py  model_selector.py  notify.py  repair_engine.py  self_heal_planner.py  self_update.py  state.json  state_manager.py  task_planner.py  watchdog.py
docs/: FAQ.md  GITHUB_TOPICS.md  PROMOTION_CHECKLIST.md  onepager.html
memory/: memory_manager.py
orchestrator/: __init__.py  manager.py  manager.py.bak  planner.py
safety/: __init__.py  confirmations.py
setup/: install_full_stack.py
speech/: asr.py  local_tts.py  speech_to_text.py  text_to_speech.py  tts.py
tools/: calibrate_mic.py  diagnostics.py  disable_autopilot.bat  enable_autopilot.bat  env_checker.ps1  hotkey_fallback.py  hotkey_test.ahk  hotkeys_simple.ahk  mic_diagnostics.py  minimal.ahk  send_outreach.py  simple_browser_test.py  start_avatar_test.py  take_release_screenshot.py  test.ahk  test_autonomous_fix.py  test_avatar_ws.py  test_codefix.py  test_commands.py  test_core_smoke.py  test_eleven.py  test_multitask.py  test_ptt_toggle.py  test_repair_engine.py  test_rollback.py  test_self_update_flow.py  test_stt_long.py  test_watchdog.py  upload_snapshot.py  verify_brain.py  vt_overlay.ahk
ui/: hud.py  keyboard.py  tray.py
vision/: __init__.py  ocr.py  screen_capture.py  template_match.py
(+225 files in other folders)
