[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-desktop-assistant"
version = "1.0.1"
description = "A voice-controlled AI desktop assistant that runs 100% locally"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Bedanta Chatterjee", email = "rupac4530@gmail.com"}
]
maintainers = [
    {name = "Bedanta Chatterjee", email = "rupac4530@gmail.com"}
]
keywords = [
    "ai",
    "voice-assistant",
    "speech-recognition",
    "whisper",
    "ollama",
    "local-llm",
    "privacy",
    "desktop-automation",
    "tts",
    "offline"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Utilities",
]

dependencies = [
    "faster-whisper>=1.0.0",
    "numpy>=1.24.0",
    "sounddevice>=0.4.6",
    "pyttsx3>=2.90",
    "keyboard>=0.13.5",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "pyautogui>=0.9.54",
]

[project.optional-dependencies]
cuda = [
    "nvidia-cublas-cu12",
    "nvidia-cudnn-cu12",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
    "bandit>=1.7.5",
]

[project.urls]
Homepage = "https://github.com/rupac4530-creator/ai-desktop-assistant"
Repository = "https://github.com/rupac4530-creator/ai-desktop-assistant.git"
Issues = "https://github.com/rupac4530-creator/ai-desktop-assistant/issues"
Changelog = "https://github.com/rupac4530-creator/ai-desktop-assistant/blob/main/CHANGELOG.md"

[project.scripts]
ai-assistant = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["speech*", "brain*", "core*", "tools*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | build
  | dist
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip = [".git", "venv", ".venv", "build", "dist"]
known_first_party = ["speech", "brain", "core", "tools"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["venv", ".venv", "build", "dist"]

[tool.pytest.ini_options]
testpaths = ["tests", "tools"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short"

[tool.bandit]
exclude_dirs = ["venv", ".venv", "tests"]
skips = ["B101"]  # Skip assert warnings
